--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header class="header">
+    <div class="container container-header">
         <nav class="nav">
             <a class="logo" href="./">Web<span class="logo-header">Studio</span></a>
             <ul class="nav-list"> 
@@ -22,13 +24,17 @@
                 <li class="contacts-item"> <a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com </a></li>  
                 <li class="contacts-item"> <a class="contacts-link" href="tel:+12127724150">+1 212-772-4150</a> </li> 
             </ul>
+    </div>          
     </header>
     <main class="main-studio">
-        <section class="section hero">
-            <h1 class="hero-title">Effective solutions for <br> your business</h1>
-            <button class="hero-button" type="button">Request our service</button>
+        <section class="hero">
+            <div class="container container-hero">
+                <h1 class="hero-title">Effective solutions for <br> your business</h1>
+                <button class="hero-button" type="button">Request our service</button>
+            </div>
         </section>
         <section class="section benefits">
+        <div class="container container-benefits ">
             <h2 class="benefits-title hidden">Benefits</h2>
             <ul class="benefits-list">
                 <li class="benefits-item">
@@ -48,9 +54,11 @@
                     <p class="benefits-desc">We use innovative tools to solve assigned tasks. It's time to simplify work processes.</p>
                 </li>
             </ul>
+        </div>
         </section>
-        <section class="section doing">
-            <h2 class="section-title">What we do</h2>
+        <section class="section about">
+        <div class="container container-about">
+            <h2 class="title title-about">What we do</h2>
             <ul class="work-list">
                 <li class="work-item">
                     <img class="work-image" src="./images/studio/studio-what-we-do1.jpg" 
@@ -69,9 +77,11 @@
                     width="370" height="294">
                 </li>
             </ul>
+        </div>
         </section>
         <section class="section workers">
-            <h2 class="section-title">Our team</h2>
+        <div class="container container-workers">
+            <h2 class="title title-workers">Our team</h2>
             <ul class="workers-list">
                 <li class="workers-item">
                     <img class="worker-picture" src="./images/studio/studio-workers1.jpg" 
@@ -102,17 +112,22 @@
                     <p class="work-desc">UI Designer</p>
                 </li>
             </ul>
+        </div>
         </section>
     </main>
     <footer class="footer">
-        <a class="logo" href="./">Web<span class="logo-footer">Studio</span></a>
+    <div class="container container-footer">
+        <div class="logo-footer-container">
+            <a class="logo" href="./">Web<span class="logo-footer">Studio</span></a>
+        </div>
         <address>
             <ul class="contact-info">
-                <li> <a class="adress" href="https://www.google.com.ua/maps/place/695+Park+Ave,+New+York,+NY+10065,+%D0%A1%D0%A8%D0%90/@40.7688994,-73.9672143,17z/data=!3m1!4b1!4m5!3m4!1s0x89c258ebe8836e8f:0xa007c44e7c4aa0eb!8m2!3d40.7688994!4d-73.9650256?hl=ru">695 Park Ave, NY 10065, USA</a></li>
-                <li> <a class="footer-contacts" href="mailto:info@devstudio.com">info@devstudio.com </a></li>                                 
-                <li> <a class="footer-contacts" href="tel:+12127724150">+1 212-772-4150</a> </li> 
+                <li class="contact-info-items"> <a class="adress" href="https://www.google.com.ua/maps/place/695+Park+Ave,+New+York,+NY+10065,+%D0%A1%D0%A8%D0%90/@40.7688994,-73.9672143,17z/data=!3m1!4b1!4m5!3m4!1s0x89c258ebe8836e8f:0xa007c44e7c4aa0eb!8m2!3d40.7688994!4d-73.9650256?hl=ru">695 Park Ave, NY 10065, USA</a></li>
+                <li class="contact-info-items"> <a class="footer-contacts" href="mailto:info@devstudio.com">info@devstudio.com </a></li>                                 
+                <li class="contact-info-items"> <a class="footer-contacts" href="tel:+12127724150">+1 212-772-4150</a> </li> 
             </ul>
         </address>
+    </div>
     </footer>
 </body>
 </html>
