--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <header class="header">
     <div class="container container-header">
         <nav class="nav">
-            <a class="logo" href="./">Web<span class="logo-header">Studio</span></a>
+            <div class="logo-header-container">
+                <a class="logo" href="./">Web<span class="logo-header">Studio</span></a>
+            </div>
             <ul class="nav-list"> 
                 <li class="nav-item"><a class="nav-link active"  href="./index.html">Studio</a></li>
                 <li class="nav-item"><a class="nav-link" href="./portfolio.html">Portfolio</a></li>
@@ -87,29 +89,37 @@
                     <img class="worker-picture" src="./images/studio/studio-workers1.jpg" 
                     alt="man in shirt and glasses"
                     width="270" height="260">
-                    <p class="worker-name">Christopher Walker</p>
-                    <p class="work-desc">Product Designer</p>
+                    <div class="worker-desc-container">
+                        <p class="worker-name">Christopher Walker</p>
+                        <p class="work-desc">Product Designer</p>
+                    </div>
                 </li>
                 <li class="workers-item">
                     <img class="worker-picture" src="./images/studio/studio-workers2.jpg" 
                     alt="woman with blond hair and glasses"
                     width="270" height="260">
-                    <p class="worker-name">Kylie Evans</p>
-                    <p class="work-desc">Frontend Developer</p>
+                    <div class="worker-desc-container">
+                        <p class="worker-name">Kylie Evans</p>
+                        <p class="work-desc">Frontend Developer</p>
+                    </div>
                 </li>
                 <li class="workers-item">
                     <img class="worker-picture" src="./images/studio/studio-workers3.jpg" 
                     alt="man in light shirt"
                     width="270" height="260">
-                    <p class="worker-name">Ryan Harris</p>
-                    <p class="work-desc">Marketing</p>
+                    <div class="worker-desc-container">
+                        <p class="worker-name">Ryan Harris</p>
+                        <p class="work-desc">Marketing</p>
+                    </div>
                 </li>
                 <li class="workers-item">
                     <img class="worker-picture" src="./images/studio/studio-workers4.jpg" 
                     alt="man in glasses and black t-shirt"
                     width="270" height="260">
-                    <p class="worker-name">Tyler Moore</p>   
-                    <p class="work-desc">UI Designer</p>
+                    <div class="worker-desc-container">
+                        <p class="worker-name">Tyler Moore</p>   
+                        <p class="work-desc">UI Designer</p>
+                    </div>
                 </li>
             </ul>
         </div>
