--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -12,7 +13,9 @@
     <header class="header">
         <div class="container container-header">
             <nav class="nav">
-                <a class="logo" href="./">Web<span class="logo-header">Studio</span></a>
+                <div class="logo-header-container">
+                    <a class="logo" href="./">Web<span class="logo-header">Studio</span></a>
+                </div>
                 <ul class="nav-list"> 
                     <li class="nav-item"><a class="nav-link"  href="./index.html">Studio</a></li>
                     <li class="nav-item"><a class="nav-link active" href="./portfolio.html">Portfolio</a></li>
